[gd_scene load_steps=6 format=3 uid="uid://bd5t3fi64uifo"]

[ext_resource type="Script" path="res://scenes/dev/generate_tactics.gd" id="1_ohw8i"]
[ext_resource type="FontFile" uid="uid://b1yle3bl6l4qs" path="res://fonts/GochiHand-Regular.ttf" id="2_ochx3"]

[sub_resource type="LabelSettings" id="LabelSettings_0i3di"]
font = ExtResource("2_ochx3")
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_07h2e"]
font = ExtResource("2_ochx3")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_5n1uj"]
font = ExtResource("2_ochx3")
font_size = 30

[node name="generate_tactics" type="Node2D"]
script = ExtResource("1_ohw8i")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 269.0
offset_top = 610.0
offset_right = 805.0
offset_bottom = 641.0

[node name="Label" type="Label" parent="."]
offset_left = 102.0
offset_top = -3.0
offset_right = 949.0
offset_bottom = 144.0
text = "TEST"
label_settings = SubResource("LabelSettings_0i3di")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
offset_left = 16.0
offset_top = 145.0
offset_right = 519.0
offset_bottom = 257.0
text = "TEST"
label_settings = SubResource("LabelSettings_07h2e")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="."]
offset_left = 606.0
offset_top = 147.0
offset_right = 1109.0
offset_bottom = 251.0
text = "TEST"
label_settings = SubResource("LabelSettings_5n1uj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="."]
modulate = Color(0.0666667, 1, 0, 1)
offset_left = 15.0
offset_top = 247.0
offset_right = 518.0
offset_bottom = 359.0
text = "TEST"
label_settings = SubResource("LabelSettings_07h2e")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label5" type="Label" parent="."]
modulate = Color(0.0666667, 1, 0, 1)
offset_left = 605.0
offset_top = 249.0
offset_right = 1108.0
offset_bottom = 353.0
text = "TEST"
label_settings = SubResource("LabelSettings_5n1uj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label6" type="Label" parent="."]
modulate = Color(1, 0.2, 0.2, 1)
offset_left = 13.0
offset_top = 349.0
offset_right = 516.0
offset_bottom = 461.0
text = "TEST"
label_settings = SubResource("LabelSettings_07h2e")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label7" type="Label" parent="."]
modulate = Color(1, 0.2, 0.2, 1)
offset_left = 603.0
offset_top = 351.0
offset_right = 1106.0
offset_bottom = 455.0
text = "TEST"
label_settings = SubResource("LabelSettings_5n1uj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Neg3" type="Button" parent="."]
offset_left = 96.0
offset_top = 468.0
offset_right = 196.0
offset_bottom = 568.0
text = "-3"

[node name="Neg2" type="Button" parent="."]
offset_left = 230.0
offset_top = 470.0
offset_right = 330.0
offset_bottom = 570.0
text = "-2"

[node name="Neg1" type="Button" parent="."]
offset_left = 359.0
offset_top = 475.0
offset_right = 459.0
offset_bottom = 575.0
text = "-1"

[node name="Zero" type="Button" parent="."]
offset_left = 511.0
offset_top = 482.0
offset_right = 611.0
offset_bottom = 582.0
text = "0"

[node name="Plus1" type="Button" parent="."]
offset_left = 650.0
offset_top = 477.0
offset_right = 750.0
offset_bottom = 577.0
text = "+1"

[node name="Plus2" type="Button" parent="."]
offset_left = 788.0
offset_top = 476.0
offset_right = 888.0
offset_bottom = 576.0
text = "+2"

[node name="Plus3" type="Button" parent="."]
offset_left = 921.0
offset_top = 479.0
offset_right = 1021.0
offset_bottom = 579.0
text = "+3"
